# Vikar

./: .gitignore  CMakeLists.txt  Makefile  config.tar  view.sh
cmake/modules/: FindQT.cmake
config/: default.det  default.in
detectors/: 7BeExp.det  7BeExp_NoLarge.det  Elastic.det  MichArray.det  Phoswich.det  VANDLE.det
dict/: .def.struct.bkp  CMakeLists.txt  LinkDef.h  def.struct
efficiency/: LargeBar.eff  Small.eff  SmallBar.eff
include/: detectors.h  detectors.hpp  geometry.h  geometry.hpp  kindeux.h  kindeux.hpp  materials.h  materials.hpp  planar.h  structures.h  vandmc.hpp  vandmcStructures.hpp  vandmc_core.h  vandmc_core.hpp  vikar_core.h
input/: 1_0mg.in  1_0mg.in2  7Be_d_5Li_4He.in  7Be_d_6Li_3He.in  Elastic.in  ElasticCarbon.in  ElasticDeuteron.in  ElasticGold.in  ElasticProton.in  Inelastic.in  InelasticCarbon.in  MCarlo.in  paul.in
materials/: Au197.mat  BC408.mat  C12.mat  C2D4.mat  C2H4.mat  C8H8.mat  CD2.mat  CH2.mat  Polystyrene.mat  Si28.mat  Silicon.mat  names.in  test.mat
old/: AngDist_read.cpp  DetAng_ann.cpp  DetAng_cyl.cpp  DetAng_plan.cpp  DetHit_cyl.cpp  DetHit_plan.cpp  DetSet_ann_read.cpp  DetSet_cyl_read.cpp  DetSet_plan_read.cpp  Res_Planar.cpp  cart2sphere.cpp  de.cpp  dedx.cpp  det_thick_ann.cpp  det_thick_cyl.cpp  det_thick_plan.cpp  kindeux.cpp  linear.cpp  momentum.cpp  ncdedx.cpp  planar.cpp  planar.h  product_proc.cpp  radlength.cpp  resolution_ann.cpp  resolution_cyl.cpp  rndgauss.cpp  sphere2cart.cpp  srim-read.cpp  strag_dE_cyl.cpp  strag_dE_plan.cpp  strag_targ.cpp  straggleA.cpp  targ_thick.cpp  transform.cpp  unitV.cpp  velocity.cpp  vikar.cpp  vikar_core.cpp  vikar_core.h  (+1 more)
share/: CMakeLists.txt
share/modulefiles/: vandmc
source/: CMakeLists.txt  detectors.cpp  geometry.cpp  kindeux.cpp  materials.cpp  planar.cpp  structures.cpp  vandmc.cpp  vandmc_core.cpp  vikar.cpp  vikarFront.cpp  vikar_core.cpp
test/: test.cpp  test.f
tools/: DistTest.py  Integrator.cpp  Kindist.cpp  Kinematics.cpp  Kineplotter.cpp  Layout.py  SpecialCutter.cpp  SpecialPlotter.cpp  XYpos.cpp  analyzer.cpp  angleConvert.cpp  dump.cpp  energy.cpp  kindeuxtest.cpp  ncdedx.cpp  optimizer.cpp  phoswich.cpp  range.cpp  renderer.cpp  test.cpp  viewer.cpp
tools/include/: comConverter.hpp  dataPack.hpp
tools/python/: Layout.py  Schematic.py
tools/qtfiles/: CMakeLists.txt  Makefile  Renderer.pro  camera.cpp  camera.h  camera.ui  main.cpp
tools/qtfiles/moc/: moc_camera.cpp
tools/qtfiles/ui/: ui_camera.h
tools/source/: CMakeLists.txt  Integrator.cpp  Kindist.cpp  Kinematics.cpp  angleConvert.cpp  comConverter.cpp  dataPack.cpp  detFileMaker.cpp  eloss.cpp  kinematicsGenerator.cpp  light.cpp  range.cpp  relativistic.cpp  root2raw.cpp  strips.cpp  testSetup.cpp  testViewer.cpp  vandleSolidAngle.cpp  vandmcFront.cpp  vikarFront.cpp
xsections/: first.test  first_excited.xsect  ground.test  ground_state.xsect  second.test
